--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,6 +18,6 @@ jobs:
       env:
         CI: true
         DATABASE_URL: postgres://alchemy:alchemy@postgres:5432/alchemy
-        SALT_ROUNDS: ${{10}}
-        COOKIE_NAME: ${{session}}
-        JWT_SECRET: S{{secret}}
+        SALT_ROUNDS: ${{secrets.SALT_ROUNDS}}
+        COOKIE_NAME: ${{secrets.COOKIE_NAME}}
+        JWT_SECRET: S{{secrets.JWT_SECRET}}
